RESOLVED FIXED210429
Fix various build warnings
https://bugs.webkit.org/show_bug.cgi?id=210429
Summary Fix various build warnings
Michael Catanzaro
Reported 2020-04-13 08:43:04 PDT
Fix various build warnings: [269/1615] Building CXX object Source/JavaScriptCore/CMak...ScriptCore/unified-sources/UnifiedSource-bfc896e1-2.cpp.o In file included from DerivedSources/JavaScriptCore/unified-sources/UnifiedSource-bfc896e1-2.cpp:2: /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/dfg/DFGArrayMode.cpp: In member function ‘bool JSC::DFG::ArrayMode::alreadyChecked(JSC::DFG::Graph&, JSC::DFG::Node*, const JSC::DFG::AbstractValue&) const’: /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/dfg/DFGArrayMode.cpp:565:9: warning: this statement may fall through [-Wimplicit-fallthrough=] 565 | } | ^ /home/mcatanzaro/Projects/WebKit/Source/JavaScriptCore/dfg/DFGArrayMode.cpp:567:5: note: here 567 | case Array::DirectArguments: | ^~~~ [877/1615] Building CXX object Source/WebCore/CMakeFiles/...s/WebCore/unified-sources/UnifiedSource-950a39b6-27.cpp.o In file included from DerivedSources/WebCore/unified-sources/UnifiedSource-950a39b6-27.cpp:7: /home/mcatanzaro/Projects/WebKit/Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp: In member function ‘void WebCore::WebGLRenderingContextBase::texImage2DBase(GCGLenum, GCGLint, GCGLenum, GCGLsizei, GCGLsizei, GCGLint, GCGLenum, GCGLenum, GCGLsizei, const void*)’: /home/mcatanzaro/Projects/WebKit/Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:4196:198: warning: unused parameter ‘byteLength’ [-Wunused-parameter] 4196 | void WebGLRenderingContextBase::texImage2DBase(GCGLenum target, GCGLint level, GCGLenum internalFormat, GCGLsizei width, GCGLsizei height, GCGLint border, GCGLenum format, GCGLenum type, GCGLsizei byteLength, const void* pixels) | ~~~~~~~~~~^~~~~~~~~~ [1072/1615] Generating ../../DerivedSources/webkit2gtk/WebKitWaylandClientProtocol.c Using "code" is deprecated - use private-code or public-code. See the help page for details. [1073/1615] Generating ../../DerivedSources/webkit2gtk/pointer-constraints-unstable-v1-protocol.c Using "code" is deprecated - use private-code or public-code. See the help page for details. [1074/1615] Generating ../../DerivedSources/webkit2gtk/relative-pointer-unstable-v1-protocol.c Using "code" is deprecated - use private-code or public-code. See the help page for details.
Attachments
Patch (6.42 KB, patch)
2020-04-13 08:48 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2020-04-13 08:48:28 PDT
Mark Lam
Comment 2 2020-04-13 09:05:59 PDT
Comment on attachment 396289 [details] Patch r=me
EWS
Comment 3 2020-04-13 09:33:38 PDT
Committed r260012: <https://trac.webkit.org/changeset/260012> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396289 [details].
Radar WebKit Bug Importer
Comment 4 2020-04-13 09:34:13 PDT
Mike Gorse
Comment 5 2020-08-17 10:14:08 PDT
FYI, --private-code was added in wayland-scanner 1.16.0, so the build now fails if wayland is older than that.
Note You need to log in before you can comment on or make changes to this bug.