Fix various build warnings https://bugs.webkit.org/show_bug.cgi?id=210429

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-04-13
Reviewed by Mark Lam.

Source/JavaScriptCore:

Fix -Wimplicit-fallthrough warning by adding a default case CRASH() to prevent the inner
switch from falling through to the outer switch.

* dfg/DFGArrayMode.cpp:
(JSC::DFG::ArrayMode::alreadyChecked const):

Source/WebCore:

Fix -Wunused-parameter warning.

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::texImage2DBase):

Source/WebKit:

Use private-code instead of deprecated code command to build the Wayland protocol.

* PlatformGTK.cmake:

Canonical link: https://commits.webkit.org/223318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260012 268f45cc-cd09-0410-ab3c-d52691b4dbfc